# vtk_web_demo

./: README.md
backend/: Makefile  go.mod  go.sum  main.go  mouseEvent.go  socketManager.go
backend/_obj/: _cgo_export.c  _cgo_gotypes.go  _cgo_main.c  main.cgo1.go  main.cgo2.c
backend/core/: CMakeLists.txt  bridge.cpp  bridge.h  core.cpp  core.h  golang.h  utils.cpp  utils.h
frontend/: package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/script/ts/: type.ts
